# carrot_os

./: .gitignore  Cargo.toml  GNUmakefile  boot.sh  limine.conf  linker.ld
.cargo/: config.toml
notes/: exceptions.md  first_chapter.md  heap.md  minimal_kernel.md  paging.md  run.md  vga_text_mode.md
src/: GNUmakefile  allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  main_temp.rs  memory.rs  serial.rs  text.rs  vga_text.rs
src/allocator/: bump.rs  fixed_size_block.rs
src/filesystem/: block_types.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
tests/: basic_boot.rs  heap_allocation.rs  should_panic.rs  stack_overflow.rs
