[package]
name = "carrot_os"
version = "0.1.0"
edition = "2021"
resolver = "2"

[dependencies]
spin = "0.9.8"
uart_16550 = "0.2.0"
volatile = "0.2.6"
x86_64 = "0.14.2"
linked_list_allocator = "0.9.0"
pic8259 = "0.10.1"
pc-keyboard = "0.7.0"
limine = "0.5.0"

# OnceCell uninitialization
[dependencies.crossbeam-queue]
version = "=0.3.11"
default-features = false
features = ["alloc"]

# used for initializing static once
[dependencies.conquer-once]
version = "0.2.0"
default-features = false

# types for polling streams
[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# make panic exit the program instead of stack unwinding
# [profile.dev]
# panic = "abort"
#
# [profile.release]
# panic = "abort"

[unstable]
panic-abort-tests = true

[package.metadata.bootimage]
# size of base and size are IO port for data bus
# peripheral hardware: port number of devices in an address
# isa-debug-exit: simple first bit check for error handling
# serial allows printing to device
test-args = [
	"-device", "isa-debug-exit,iobase=0xf4,iosize=0x4", 
	"-serial", "stdio", "-display", "none"]
test-success-exit-code = 33 # (0x10 << 1) | 1;

# treat tests as normal executables
[[test]]
name = "should_panic"
harness = false

[[test]]
name = "stack_overflow"
harness = false
